--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- META TAG OG -->
   <meta property="og:type" content="website"/>
   <meta property="og:title" content="LIFREESTYLE"/>
-  <meta property="og:image" content=""/>
+  <meta property="og:image" content="https://catalogo-lifreestyle-4nkj.vercel.app/assets/logo.png"/>
   <meta property="og:description" content="Vestindo o seu estilo de vida!" />
   <meta property="og:site_name" content="LIFREESTYLE" />
 
