--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <p class="text-0xl md:text-1xl font-bold mt-3 mb-3 bg-black text-white px-1 py-1 rounded-lg mt-5">>
   Crédito em até 3x sem juros 
  
-  <p class="text-0xl md:text-1xl font-bold mt-3 mb-3 bg-black text-white px-1 py-1 rounded-lg mt-5">> pix $5,00 de desconto por peça </p>
+  <p class="text-0xl md:text-1xl font-bold mt-3 mb-3 bg-black text-white px-1 py-1 rounded-lg mt-5">>No pix $5,00 de desconto por peça </p>
   <p class="text-0xl md:text-1xl font-bold mt-3 mb-3 bg-black text-white px-4 py-1 rounded-lg mt-5">>taxa de entrega para cidades vizinhas $8,00</p>
 
   <h2 class="text-2xl md:text-3xl font-bold mt-9 mb-6 bg-black text-white px-4 py-1 rounded-lg mt-5" id="camisetas">
@@ -412,7 +412,7 @@
     src="./assets/Thug nine espinhos.jpeg"
     alt="CAMISA STREETWEAR"
     class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300 product-image"
-    data-image="./assetsThug nine espinhos.jpeg" <!-- Adicione esta linha -->
+    data-image="./assets/Thug nine espinhos.jpeg" <!-- Adicione esta linha -->
   
 
   <div>
@@ -425,7 +425,7 @@
       <p class="font-bold text-lg">R$ 75.00</p>
       <button 
         class="bg-gray-900 px-5 rounded add-to-cart-btn"
-        data-name="Thug nine espinhos.jpeg"
+        data-name="Thug nine espinhos"
         data-price="75.00"
       >
         <i class="fa fa-cart-plus text-lg text-white"></i>
@@ -1761,7 +1761,7 @@
     src="./assets/Town country sorriso 2.jpeg"
     alt="CAMISA STREETWEAR"
     class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300 product-image"
-    data-image="./assets/Town country sorriso 2.jpegg" <!-- Adicione esta linha -->
+    data-image="./assets/Town country sorriso 2.jpeg" <!-- Adicione esta linha -->
   
 
   <div>
@@ -3729,7 +3729,7 @@
   
     <div>
       <p class="font-bold" >NIKE LOGO</p>
-      <p class="text-sm">TM- GG | 100% algodão 
+      <p class="text-sm">TM- GG/M | 100% algodão 
         Fio 30.1 penteado 
         Modelagem streetwear</p>
   
