--- a/index.html
+++ b/index.html
@@ -4233,19 +4233,44 @@
   </div>
 </div>
 <!-- FIM PRODUTO ITEM -->
+ <!-- PRODUTO ITEM -->
+ <div class="flex gap-2">
+  <img 
+    src="./assets/Over TUPAC BEGE.jpeg"
+    alt="CAMISA OVERSIZED"
+    class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300 product-image"
+    data-image="./assets/Over TUPAC BEGE.jpeg" <!-- Adicione esta linha -->
 
 
+  <div>
+    <p class="font-bold">Over TUPAC BEGE</p>
+    <p class="text-sm"> TM- M | Malhão suedine 
+      Modelagem oversized</p>
+
+    <div class="flex items-center gap-2 justify-between mt-3">
+      <p class="font-bold text-lg">R$ 90.00</p>
+      <button 
+        class="bg-gray-900 px-5 rounded add-to-cart-btn"
+        data-name="Over TUPAC BEGE"
+        data-price="90"
+      >
+        <i class="fa fa-cart-plus text-lg text-white"></i>
+      </button>
+    </div>
+  </div>
+</div>
+<!-- FIM PRODUTO ITEM -->
   <!-- PRODUTO ITEM -->
   <div class="flex gap-2">
     <img 
-      src="./assets/Over Adidas originals.jpeg"
+      src="./assets/Over CORTEIZ OFF.jpeg"
       alt="CAMISA OVERSIZED"
       class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300 product-image"
-      data-image="./assets/Over Adidas originals.jpeg" <!-- Adicione esta linha -->
+      data-image="./assets/Over CORTEIZ OFF.jpeg" <!-- Adicione esta linha -->
   
 
     <div>
-      <p class="font-bold">Over Adidas originals</p>
+      <p class="font-bold">Over CORTEIZ OFF</p>
       <p class="text-sm"> TM- M | Malhão suedine 
         Modelagem oversized</p>
 
@@ -4253,7 +4278,7 @@
         <p class="font-bold text-lg">R$ 90.00</p>
         <button 
           class="bg-gray-900 px-5 rounded add-to-cart-btn"
-          data-name="Over Adidas originals"
+          data-name="Over CORTEIZ OFF"
           data-price="90"
         >
           <i class="fa fa-cart-plus text-lg text-white"></i>
@@ -4262,6 +4287,34 @@
     </div>
   </div>
   <!-- FIM PRODUTO ITEM -->
+    <!-- PRODUTO ITEM -->
+    <div class="flex gap-2">
+      <img 
+        src="./assets/Over PALM ANGELS URSO NY PRETA.jpeg"
+        alt="CAMISA OVERSIZED"
+        class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300 product-image"
+        data-image="./assets/Over PALM ANGELS URSO NY PRETA.jpeg" <!-- Adicione esta linha -->
+    
+
+      <div>
+        <p class="font-bold">Over PALM ANGELS URSO NY PRETA</p>
+        <p class="text-sm"> TM- M | Malhão suedine 
+          Modelagem oversized</p>
+
+        <div class="flex items-center gap-2 justify-between mt-3">
+          <p class="font-bold text-lg">R$ 90.00</p>
+          <button 
+            class="bg-gray-900 px-5 rounded add-to-cart-btn"
+            data-name="Over PALM ANGELS URSO NY PRETA"
+            data-price="90"
+          >
+            <i class="fa fa-cart-plus text-lg text-white"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+    <!-- FIM PRODUTO ITEM -->
+
     <!-- PRODUTO ITEM -->
     <div class="flex gap-2">
       <img 
@@ -5689,35 +5742,6 @@
               <button 
                 class="bg-gray-900 px-5 rounded add-to-cart-btn"
                 data-name="Short cargo nike 2 bolsos"
-                data-price="90"
-              >
-                <i class="fa fa-cart-plus text-lg text-white"></i>
-              </button>
-            </div>
-          </div>
-        </div>
-        <!-- FIM PRODUTO ITEM -->
-
-        <!-- PRODUTO ITEM -->
-        <div class="flex gap-2">
-          <img 
-            src="./assets/Short cargo high paradise.jpeg"
-            alt="SHORT CARGO"
-            class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300 product-image"
-            data-image="./assets/Short cargo high paradise.jpeg" <!-- Adicione esta linha -->
-        
-  
-          <div>
-            <p class="font-bold">Short cargo high paradise</p>
-            <p class="text-sm"> TM- M | GG |Short cargo Premium 
-              Modelos de site
-              100% elastano</p>
-  
-            <div class="flex items-center gap-2 justify-between mt-3">
-              <p class="font-bold text-lg">R$ 90.00</p>
-              <button 
-                class="bg-gray-900 px-5 rounded add-to-cart-btn"
-                data-name="Short cargo high paradise"
                 data-price="90"
               >
                 <i class="fa fa-cart-plus text-lg text-white"></i>
