--- a/index.html
+++ b/index.html
@@ -4369,6 +4369,492 @@
         </div>
       </div>
       <!-- FIM PRODUTO ITEM -->
+        <!-- PRODUTO ITEM -->
+ <div class="flex gap-2">
+  <img 
+    src="./assets/Over STUSSY TOKYO.jpeg"
+    alt="CAMISA OVERSIZED"
+    class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300 product-image"
+    data-image="./assets/Over STUSSY TOKYO.jpeg" <!-- Adicione esta linha -->
+
+
+  <div>
+    <p class="font-bold">Over STUSSY TOKYO</p>
+    <p class="text-sm"> TM- M | Malhão suedine 
+      Modelagem oversized</p>
+
+    <div class="flex items-center gap-2 justify-between mt-3">
+      <p class="font-bold text-lg">R$ 90.00</p>
+      <button 
+        class="bg-gray-900 px-5 rounded add-to-cart-btn"
+        data-name="Over STUSSY TOKYO"
+        data-price="90"
+      >
+        <i class="fa fa-cart-plus text-lg text-white"></i>
+      </button>
+    </div>
+  </div>
+</div>
+<!-- FIM PRODUTO ITEM -->
+  <!-- PRODUTO ITEM -->
+  <div class="flex gap-2">
+    <img 
+      src="./assets/Over PALM ANGELS URSO NY.jpeg"
+      alt="CAMISA OVERSIZED"
+      class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300 product-image"
+      data-image="./assets/Over PALM ANGELS URSO NY.jpeg" <!-- Adicione esta linha -->
+  
+  
+    <div>
+      <p class="font-bold">Over PALM ANGELS URSO NY MARROM</p>
+      <p class="text-sm"> TM- M | Malhão suedine 
+        Modelagem oversized</p>
+  
+      <div class="flex items-center gap-2 justify-between mt-3">
+        <p class="font-bold text-lg">R$ 90.00</p>
+        <button 
+          class="bg-gray-900 px-5 rounded add-to-cart-btn"
+          data-name="Over PALM ANGELS URSO NY MARROM"
+          data-price="90"
+        >
+          <i class="fa fa-cart-plus text-lg text-white"></i>
+        </button>
+      </div>
+    </div>
+  </div>
+  <!-- FIM PRODUTO ITEM -->
+    <!-- PRODUTO ITEM -->
+ <div class="flex gap-2">
+  <img 
+    src="./assets/Over NIKE GRAFFITE OFF.jpeg"
+    alt="CAMISA OVERSIZED"
+    class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300 product-image"
+    data-image="./assets/Over NIKE GRAFFITE OFF.jpeg" <!-- Adicione esta linha -->
+
+
+  <div>
+    <p class="font-bold">Over NIKE GRAFFITE OFF</p>
+    <p class="text-sm"> TM- M | Malhão suedine 
+      Modelagem oversized</p>
+
+    <div class="flex items-center gap-2 justify-between mt-3">
+      <p class="font-bold text-lg">R$ 90.00</p>
+      <button 
+        class="bg-gray-900 px-5 rounded add-to-cart-btn"
+        data-name="Over NIKE GRAFFITE OFF"
+        data-price="90"
+      >
+        <i class="fa fa-cart-plus text-lg text-white"></i>
+      </button>
+    </div>
+  </div>
+</div>
+<!-- FIM PRODUTO ITEM -->
+  <!-- PRODUTO ITEM -->
+  <div class="flex gap-2">
+    <img 
+      src="./assets/Over CORTEIZ PRETA.jpeg"
+      alt="CAMISA OVERSIZED"
+      class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300 product-image"
+      data-image="./assets/Over CORTEIZ PRETA.jpeg" <!-- Adicione esta linha -->
+  
+  
+    <div>
+      <p class="font-bold">Over CORTEIZ PRETA</p>
+      <p class="text-sm"> TM- M | Malhão suedine 
+        Modelagem oversized</p>
+  
+      <div class="flex items-center gap-2 justify-between mt-3">
+        <p class="font-bold text-lg">R$ 90.00</p>
+        <button 
+          class="bg-gray-900 px-5 rounded add-to-cart-btn"
+          data-name="Over CORTEIZ PRETA"
+          data-price="90"
+        >
+          <i class="fa fa-cart-plus text-lg text-white"></i>
+        </button>
+      </div>
+    </div>
+  </div>
+  <!-- FIM PRODUTO ITEM -->
+    <!-- PRODUTO ITEM -->
+ <div class="flex gap-2">
+  <img 
+    src="./assets/Over LV PERNALONGA BEGE.jpeg"
+    alt="CAMISA OVERSIZED"
+    class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300 product-image"
+    data-image="./assets/Over LV PERNALONGA BEGE.jpeg" <!-- Adicione esta linha -->
+
+
+  <div>
+    <p class="font-bold">Over LV PERNALONGA BEGE</p>
+    <p class="text-sm"> TM- M | Malhão suedine 
+      Modelagem oversized</p>
+
+    <div class="flex items-center gap-2 justify-between mt-3">
+      <p class="font-bold text-lg">R$ 90.00</p>
+      <button 
+        class="bg-gray-900 px-5 rounded add-to-cart-btn"
+        data-name="Over LV PERNALONGA BEGE"
+        data-price="90"
+      >
+        <i class="fa fa-cart-plus text-lg text-white"></i>
+      </button>
+    </div>
+  </div>
+</div>
+<!-- FIM PRODUTO ITEM -->
+  <!-- PRODUTO ITEM -->
+  <div class="flex gap-2">
+    <img 
+      src="./assets/Over THE NORTH FACE  BEGE.jpeg"
+      alt="CAMISA OVERSIZED"
+      class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300 product-image"
+      data-image="./assets/Over THE NORTH FACE  BEGE.jpeg" <!-- Adicione esta linha -->
+  
+  
+    <div>
+      <p class="font-bold">Over THE NORTH FACE  BEGE</p>
+      <p class="text-sm"> TM- M | Malhão suedine 
+        Modelagem oversized</p>
+  
+      <div class="flex items-center gap-2 justify-between mt-3">
+        <p class="font-bold text-lg">R$ 90.00</p>
+        <button 
+          class="bg-gray-900 px-5 rounded add-to-cart-btn"
+          data-name="Over THE NORTH FACE  BEGE"
+          data-price="90"
+        >
+          <i class="fa fa-cart-plus text-lg text-white"></i>
+        </button>
+      </div>
+    </div>
+  </div>
+  <!-- FIM PRODUTO ITEM -->
+    <!-- PRODUTO ITEM -->
+ <div class="flex gap-2">
+  <img 
+    src="./assets/Over TUPAC MARROM.jpeg"
+    alt="CAMISA OVERSIZED"
+    class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300 product-image"
+    data-image="./assets/Over TUPAC MARROM.jpeg" <!-- Adicione esta linha -->
+
+
+  <div>
+    <p class="font-bold">Over TUPAC MARROM</p>
+    <p class="text-sm"> TM- M | Malhão suedine 
+      Modelagem oversized</p>
+
+    <div class="flex items-center gap-2 justify-between mt-3">
+      <p class="font-bold text-lg">R$ 90.00</p>
+      <button 
+        class="bg-gray-900 px-5 rounded add-to-cart-btn"
+        data-name="Over TUPAC MARROM"
+        data-price="90"
+      >
+        <i class="fa fa-cart-plus text-lg text-white"></i>
+      </button>
+    </div>
+  </div>
+</div>
+<!-- FIM PRODUTO ITEM -->
+  <!-- PRODUTO ITEM -->
+  <div class="flex gap-2">
+    <img 
+      src="./assets/Over ANGEL BEGE.jpeg"
+      alt="CAMISA OVERSIZED"
+      class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300 product-image"
+      data-image="./assets/Over ANGEL BEGE.jpeg" <!-- Adicione esta linha -->
+  
+  
+    <div>
+      <p class="font-bold">Over ANGEL BEGE</p>
+      <p class="text-sm"> TM- M | Malhão suedine 
+        Modelagem oversized</p>
+  
+      <div class="flex items-center gap-2 justify-between mt-3">
+        <p class="font-bold text-lg">R$ 90.00</p>
+        <button 
+          class="bg-gray-900 px-5 rounded add-to-cart-btn"
+          data-name="Over ANGEL BEGE"
+          data-price="90"
+        >
+          <i class="fa fa-cart-plus text-lg text-white"></i>
+        </button>
+      </div>
+    </div>
+  </div>
+  <!-- FIM PRODUTO ITEM -->
+    <!-- PRODUTO ITEM -->
+ <div class="flex gap-2">
+  <img 
+    src="./assets/Over SUPREME BART 2.jpeg"
+    alt="CAMISA OVERSIZED"
+    class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300 product-image"
+    data-image="./assets/Over SUPREME BART 2.jpeg" <!-- Adicione esta linha -->
+
+
+  <div>
+    <p class="font-bold">Over SUPREME BART 2</p>
+    <p class="text-sm"> TM- M | Malhão suedine 
+      Modelagem oversized</p>
+
+    <div class="flex items-center gap-2 justify-between mt-3">
+      <p class="font-bold text-lg">R$ 90.00</p>
+      <button 
+        class="bg-gray-900 px-5 rounded add-to-cart-btn"
+        data-name="Over SUPREME BART 2"
+        data-price="90"
+      >
+        <i class="fa fa-cart-plus text-lg text-white"></i>
+      </button>
+    </div>
+  </div>
+</div>
+<!-- FIM PRODUTO ITEM -->
+  <!-- PRODUTO ITEM -->
+  <div class="flex gap-2">
+    <img 
+      src="./assets/Over PALM ANGEL COST PRETA.jpeg"
+      alt="CAMISA OVERSIZED"
+      class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300 product-image"
+      data-image="./assets/Over PALM ANGEL COST PRETA.jpeg" <!-- Adicione esta linha -->
+  
+  
+    <div>
+      <p class="font-bold">Over PALM ANGEL COST PRETA</p>
+      <p class="text-sm"> TM- M | Malhão suedine 
+        Modelagem oversized</p>
+  
+      <div class="flex items-center gap-2 justify-between mt-3">
+        <p class="font-bold text-lg">R$ 90.00</p>
+        <button 
+          class="bg-gray-900 px-5 rounded add-to-cart-btn"
+          data-name="Over PALM ANGEL COST PRETA"
+          data-price="90"
+        >
+          <i class="fa fa-cart-plus text-lg text-white"></i>
+        </button>
+      </div>
+    </div>
+  </div>
+  <!-- FIM PRODUTO ITEM -->
+     <!-- PRODUTO ITEM -->
+ <div class="flex gap-2">
+  <img 
+    src="./assets/Over PALM ANGEL COST BEGE.jpeg"
+    alt="CAMISA OVERSIZED"
+    class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300 product-image"
+    data-image="./assets/Over PALM ANGEL COST BEGE.jpeg" <!-- Adicione esta linha -->
+
+
+  <div>
+    <p class="font-bold">Over PALM ANGEL COST BEGE</p>
+    <p class="text-sm"> TM- M | Malhão suedine 
+      Modelagem oversized</p>
+
+    <div class="flex items-center gap-2 justify-between mt-3">
+      <p class="font-bold text-lg">R$ 90.00</p>
+      <button 
+        class="bg-gray-900 px-5 rounded add-to-cart-btn"
+        data-name="Over PALM ANGEL COST BEGE"
+        data-price="90"
+      >
+        <i class="fa fa-cart-plus text-lg text-white"></i>
+      </button>
+    </div>
+  </div>
+</div>
+<!-- FIM PRODUTO ITEM -->
+   <!-- PRODUTO ITEM -->
+   <div class="flex gap-2">
+    <img 
+      src="./assets/Over OFF WHITE TINT 2.jpeg"
+      alt="CAMISA OVERSIZED"
+      class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300 product-image"
+      data-image="./assets/Over OFF WHITE TINT 2.jpeg" <!-- Adicione esta linha -->
+  
+  
+    <div>
+      <p class="font-bold">Over OFF WHITE TINT 2</p>
+      <p class="text-sm"> TM- M | Malhão suedine 
+        Modelagem oversized</p>
+  
+      <div class="flex items-center gap-2 justify-between mt-3">
+        <p class="font-bold text-lg">R$ 90.00</p>
+        <button 
+          class="bg-gray-900 px-5 rounded add-to-cart-btn"
+          data-name="Over OFF WHITE TINT 2"
+          data-price="90"
+        >
+          <i class="fa fa-cart-plus text-lg text-white"></i>
+        </button>
+      </div>
+    </div>
+  </div>
+  <!-- FIM PRODUTO ITEM -->
+     <!-- PRODUTO ITEM -->
+ <div class="flex gap-2">
+  <img 
+    src="./assets/Over ADIDAS MICKEY.jpeg"
+    alt="CAMISA OVERSIZED"
+    class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300 product-image"
+    data-image="./assets/Over ADIDAS MICKEY.jpeg" <!-- Adicione esta linha -->
+
+
+  <div>
+    <p class="font-bold">Over ADIDAS MICKEY</p>
+    <p class="text-sm"> TM- M | Malhão suedine 
+      Modelagem oversized</p>
+
+    <div class="flex items-center gap-2 justify-between mt-3">
+      <p class="font-bold text-lg">R$ 90.00</p>
+      <button 
+        class="bg-gray-900 px-5 rounded add-to-cart-btn"
+        data-name="Over ADIDAS MICKEY"
+        data-price="90"
+      >
+        <i class="fa fa-cart-plus text-lg text-white"></i>
+      </button>
+    </div>
+  </div>
+</div>
+<!-- FIM PRODUTO ITEM -->
+   <!-- PRODUTO ITEM -->
+   <div class="flex gap-2">
+    <img 
+      src="./assets/Over OFF × NIKE TÊNIS.jpeg"
+      alt="CAMISA OVERSIZED"
+      class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300 product-image"
+      data-image="./assets/Over OFF × NIKE TÊNIS.jpeg" <!-- Adicione esta linha -->
+  
+  
+    <div>
+      <p class="font-bold">Over OFF × NIKE TÊNIS</p>
+      <p class="text-sm"> TM- M | Malhão suedine 
+        Modelagem oversized</p>
+  
+      <div class="flex items-center gap-2 justify-between mt-3">
+        <p class="font-bold text-lg">R$ 90.00</p>
+        <button 
+          class="bg-gray-900 px-5 rounded add-to-cart-btn"
+          data-name="Over OFF × NIKE TÊNIS"
+          data-price="90"
+        >
+          <i class="fa fa-cart-plus text-lg text-white"></i>
+        </button>
+      </div>
+    </div>
+  </div>
+  <!-- FIM PRODUTO ITEM -->
+     <!-- PRODUTO ITEM -->
+ <div class="flex gap-2">
+  <img 
+    src="./assets/Over PLAY COMME.jpeg"
+    alt="CAMISA OVERSIZED"
+    class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300 product-image"
+    data-image="./assets/Over PLAY COMME.jpeg" <!-- Adicione esta linha -->
+
+
+  <div>
+    <p class="font-bold">Over PLAY COMME</p>
+    <p class="text-sm"> TM- M | Malhão suedine 
+      Modelagem oversized</p>
+
+    <div class="flex items-center gap-2 justify-between mt-3">
+      <p class="font-bold text-lg">R$ 90.00</p>
+      <button 
+        class="bg-gray-900 px-5 rounded add-to-cart-btn"
+        data-name="Over PLAY COMME"
+        data-price="90"
+      >
+        <i class="fa fa-cart-plus text-lg text-white"></i>
+      </button>
+    </div>
+  </div>
+</div>
+<!-- FIM PRODUTO ITEM -->
+   <!-- PRODUTO ITEM -->
+   <div class="flex gap-2">
+    <img 
+      src="./assets/Over PALM ANGEL OK 3.jpeg"
+      alt="CAMISA OVERSIZED"
+      class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300 product-image"
+      data-image="./assets/Over PALM ANGEL OK 3.jpeg" <!-- Adicione esta linha -->
+  
+  
+    <div>
+      <p class="font-bold">Over PALM ANGEL OK 3</p>
+      <p class="text-sm"> TM- M | Malhão suedine 
+        Modelagem oversized</p>
+  
+      <div class="flex items-center gap-2 justify-between mt-3">
+        <p class="font-bold text-lg">R$ 90.00</p>
+        <button 
+          class="bg-gray-900 px-5 rounded add-to-cart-btn"
+          data-name="Over PALM ANGEL OK 3"
+          data-price="90"
+        >
+          <i class="fa fa-cart-plus text-lg text-white"></i>
+        </button>
+      </div>
+    </div>
+  </div>
+  <!-- FIM PRODUTO ITEM -->
+     <!-- PRODUTO ITEM -->
+ <div class="flex gap-2">
+  <img 
+    src="./assets/Over DONT'S 3.jpeg"
+    alt="CAMISA OVERSIZED"
+    class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300 product-image"
+    data-image="./assets/Over DONT'S 3.jpeg" <!-- Adicione esta linha -->
+
+
+  <div>
+    <p class="font-bold">Over DONT'S 3</p>
+    <p class="text-sm"> TM- M | Malhão suedine 
+      Modelagem oversized</p>
+
+    <div class="flex items-center gap-2 justify-between mt-3">
+      <p class="font-bold text-lg">R$ 90.00</p>
+      <button 
+        class="bg-gray-900 px-5 rounded add-to-cart-btn"
+        data-name="Over DONT'S 3"
+        data-price="90"
+      >
+        <i class="fa fa-cart-plus text-lg text-white"></i>
+      </button>
+    </div>
+  </div>
+</div>
+<!-- FIM PRODUTO ITEM -->
+   <!-- PRODUTO ITEM -->
+   <div class="flex gap-2">
+    <img 
+      src="./assets/Over SUPREME WORLD 2.jpeg"
+      alt="CAMISA OVERSIZED"
+      class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300 product-image"
+      data-image="./assets/Over SUPREME WORLD 2.jpeg" <!-- Adicione esta linha -->
+  
+  
+    <div>
+      <p class="font-bold">Over SUPREME WORLD 2</p>
+      <p class="text-sm"> TM- M | Malhão suedine 
+        Modelagem oversized</p>
+  
+      <div class="flex items-center gap-2 justify-between mt-3">
+        <p class="font-bold text-lg">R$ 90.00</p>
+        <button 
+          class="bg-gray-900 px-5 rounded add-to-cart-btn"
+          data-name="Over SUPREME WORLD 2"
+          data-price="90"
+        >
+          <i class="fa fa-cart-plus text-lg text-white"></i>
+        </button>
+      </div>
+    </div>
+  </div>
+  <!-- FIM PRODUTO ITEM -->
        
         <!-- PRODUTO ITEM -->
       <div class="flex gap-2">
